--- a/appspec.yml
+++ b/appspec.yml
@@ -13,18 +13,18 @@ permissions:
 
 hooks:
   BeforeInstall:
-    - location: server_clear.sh
+    - location: /bin/server_clear.sh
       timeout: 300
       runas: ec2-user
   AfterInstall:
-    - location: fix_privileges.sh
+    - location: /bin/fix_privileges.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: server_start.sh
+    - location: /bin/server_start.sh
       timeout: 20
       runas: ec2-user
   ApplicationStop:
-    - location: server_stop.sh
+    - location: /bin/server_stop.sh
       timeout: 20
       runas: ec2-user
